<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="placeholder">PLACEHOLDER TEXT</string>
    <string name="drawer_faq">FAQ</string>
    <string name="log_in">Sign in</string>
    <string name="store_card">STORE CARD</string>
    <string name="credit_card">CREDIT CARD</string>
    <string name="personal_loan">PERSONAL LOAN</string>
    <string name="available_funds">Available Funds</string>
    <string name="total_amount_due">Total Amount Due</string>
    <string name="deduction_day">Deduction Day:</string>
    <string name="amount_to_be_debited">Amount to be Debited:</string>
    <string name="active">ACTIVE</string>
    <string name="account_in_arrears">ACCOUNT IN ARREARS</string>
    <string name="next">NEXT</string>
    <string name="cancel" tools:ignore="ButtonCase">CANCEL</string>
    <string name="cancel_underline" tools:ignore="ButtonCase"><u>CANCEL</u></string>
    <string name="submit">SUBMIT</string>
    <string name="valid_from">VALID FROM</string>
    <string name="valid_until">VALID UNTIL</string>
    <string name="ok">OK</string>
    <string name="retry">RETRY</string>
    <string name="debit_order_title">DEBIT ORDER debit_order_status</string>
    <string name="debit_order_description">Your Debit Order is currently debit_order_status. See your debit order details below.</string>
    <string name="stores_nearby">STORES NEARBY</string>
    <string name="wrewards">WREWARDS</string>
    <string name="recent_search">RECENT SEARCHES</string>
    <string name="google_maps">GOOGLE MAPS</string>
    <string name="km">km</string>
    <string name="contact_us">Contact Us</string>
    <string name="cart">Cart</string>
    <string name="delivery_location">Delivery Location</string>
    <string name="set_delivery_location_button">SET DELIVERY LOCATION</string>
    <string name="previously_selected_locations">Previously Selected Locations</string>
    <string name="select_your_province">Select your Province</string>
    <string name="select_your_suburb">Select your Suburb</string>
    <string name="set_your_delivery_location">Set your Delivery Location</string>
    <string name="sign_out">Sign Out</string>
    <string name="brands">Brands</string>
    <string name="why_we_need_location_services">WHY WE NEED LOCATION SERVICES</string>
    <string name="location_off_message">We use location services to show you stock at your nearest store, and delivery slots in your area.</string>
    <string name="go_to_settings">ENABLE LOCATION SERVICES</string>
    <string name="off_instantly">OFF</string>
    <string name="nav_item_wrewards">WREWARDS</string>
    <string name="apply_now">APPLY NOW</string>
    <string name="please_enter_the_amount">PLEASE ENTER THE AMOUNT YOU WOULD LIKE TO WITHDRAW:</string>
    <string name="confirm_loan_withdrawal">PLEASE CONFIRM YOUR LOAN\nREQUEST DETAILS:</string>
    <string name="call_us">CALL US</string>
    <string name="txt_local_caller">Local caller</string>
    <string name="fs_local_caller_number">0861 502 020</string>
    <string name="fs_inter_national_caller_number">+27 21 411 5000</string>
    <string name="txt_international_caller">International caller</string>
    <string name="txt_call_center_opening_hours">Call Centre Operating Hours</string>
    <string name="fs_call_center_opening_hours">Daily 7.30am - 9pm</string>
    <string name="email_us">email us</string>
    <string name="txt_black_credit_card_query">Black Credit Card query</string>
    <string name="txt_complaint">Complaint</string>
    <string name="txt_cc_query">Credit Card query</string>
    <string name="txt_wrewards_query">WRewards query</string>
    <string name="txt_insurance_claim">Insurance claim</string>
    <string name="txt_payment_query">Payment query</string>
    <string name="txt_sc_and_pl_query">Store Card &amp; Personal Loan query</string>
    <string name="txt_technical_problem">Technical</string>
    <string name="online_local_caller_number">0860 100 987</string>
    <string name="online_inter_national_caller_number">+27 21 407 6137</string>
    <string name="online_call_center_opening_hours">Monday - Saturday 9am - 5pm \n\nSunday 9am - 2pm \n\nPublic Holidays 9am - 2pm</string>
    <string name="general_call_center_opening_hours">Monday - Friday 8am - 5.30pm \n\nSaturday 8am - 5pm \n\nSunday 9am - 1pm \n\nPublic Holidays 9am - 1pm</string>
    <string name="online_shop_reg_login">Online shop registration /Login</string>
    <string name="txt_delivery_queries">Delivery queries</string>
    <string name="txt_order_queries">Order queries</string>
    <string name="customer_service_local_caller_number">0860 022 002</string>
    <string name="customer_service_inter_national_caller_number">(021) 407 3995</string>
    <string name="customer_service_international_call">+27 21 407 7002</string>
    <string name="txt_product_query">Product query</string>
    <string name="txt_store_query">Store query</string>
    <string name="wrewards_local_caller_number">0861 502 050</string>
    <string name="wrewards_inter_national_caller_number">+27 21 407 7003</string>
    <string name="wrewards_call_center_opening_hours">Monday - Friday 8am - 5.30pm \n\nSaturday 8:30am - 2pm \n\nSunday 9am - 1pm \n\nPublic Holidays 9am - 1pm</string>
    <string name="txt_wrewards_card">WRewards card</string>
    <string name="txt_wrewards_loyalty_vouchers">WRewards loyalty vouchers</string>
    <string name="txt_littleworld">Littleworld</string>
    <string name="txt_general">General</string>
    <string name="myschool_call_center_opening_hours">Monday - Friday 8am - 5pm \n\nNo Weekends \n\nNo Public Holidays</string>
    <string name="txt_myschool_card">MySchool card</string>
    <string name="txt_general_enquiry">General enquiries</string>
    <string name="contact_us_financial_services">Financial Services</string>
    <string name="contact_us_customer_service">Customer Services</string>
    <string name="contact_us_wrewards">WRewards</string>
    <string name="contact_us_myschool">MySchool enquiries</string>
    <string name="accounts_walkthrough_desc_1">The new Woolies app gives you easy access to fashion trends, recipes, stores, account information and so much more.</string>
    <string name="accounts_walkthrough_desc_2">See how much you’ve saved, track your tier status and access all your vouchers.</string>
    <string name="accounts_walkthrough_desc_3">Conveniently view your available funds, next payment due, recent transactions and so much more.</string>
    <string name="accounts_walkthrough_desc_4">Create a profile or use your existing Woolies online sign in to get started. Your sign in details will be the same on the app, mobi site and website.</string>
    <string name="accounts_walkthrough_title_1">welcome</string>
    <string name="accounts_walkthrough_title_2">WRewards at a glance</string>
    <string name="accounts_walkthrough_title_3">Financial services</string>
    <string name="accounts_walkthrough_title_4">GET STARTED</string>
    <string name="distance_in_km">km</string>
    <string name="search_by_store_loc">Search by Store or Location</string>
    <string name="skip">SKIP</string>
    <string name="cli_continue">continue</string>
    <string name="cli_status_concluded">cli-concluded</string>
    <string name="cli_credit_limit_increase">CREDIT LIMIT INCREASE</string>
    <string name="cli_before_we_get_started">before we get started</string>
    <string name="features_and_benefit">FEATURES AND BENEFITS</string>
    <string name="features_and_benefit_desc">Your peace of mind is important to us, so we offer you comprehensive balance protection insurance on your Woolies Store Card, Credit Card or Personal Loan.</string>
    <string name="comprehensive_balance_protection">Comprehensive Balance Protection Insurance</string>
    <string name="comprehensive_balance_protection_desc1">Covers you in the event of Death, Total Loss of Income, Critical Illness, Temporary and Permanent Disability.</string>
    <string name="comprehensive_balance_protection_desc2">Pays the outstanding balance on your account (provided it is not in arrears), up to a maximum of R100 000, in the event of your Death, Permanent Disability, or if you are diagnosed with a Critical Illness.</string>
    <string name="comprehensive_balance_protection_desc3">Pays your instalments for up to 12 months (provided it is not in arrears), up to a maximum of R100 000, in the event of Total Loss of Income or Temporary Disability.</string>
    <string name="additional_death_cover">Additional Death Cover</string>
    <string name="additional_death_cover_desc">For an extra monthly premium of only R13.70 per month, you can also take out additional death benefit, which pays R20 000 to your next of kin in the event of your death, to help them handle unforeseen expenses.</string>
    <string name="partner_spouse">Partner / Spouse</string>
    <string name="partner_spouse_desc">Balance protection insurance for your spouse or partner can also be arranged. An additional monthly premium will be charged.</string>
    <string name="bottom_title_today">Today</string>
    <string name="bottom_title_product">Shop</string>
    <string name="bottom_title_cart">My Cart</string>
    <string name="bottom_title_reward">WRewards</string>
    <string name="bottom_title_account">My Accounts</string>
    <string name="cd_store_card_text">store card text</string>
    <string name="cd_store_card_apply_now_text">store card apply now text</string>
    <string name="delivery_details">Delivery Details</string>
    <string name="delivery_details_desc">Please complete your delivery details below:</string>
    <string name="complex_building">Complex/Building</string>
    <string name="street_address">Street Address</string>
    <string name="suburb">Suburb</string>
    <string name="city_town">City/Town</string>
    <string name="province">Province</string>
    <string name="postal_code">Postal Code</string>
    <string name="build_or_complex_error_msg">Please enter a Complex/Building name</string>
    <string name="business_name_error_msg">Please enter a Business name</string>
    <string name="street_address_error_msg">Please enter a Street address</string>
    <string name="suburb_error_msg">Please enter a Suburb</string>
    <string name="city_or_town_error_msg">Please enter a City/Town</string>
    <string name="province_error_msg">Please enter a Province</string>
    <string name="postalcode_error_msg">Please enter a Postal code</string>
    <string name="business_name_optional">Business Name (Optional)</string>
    <string name="cd_ccd_btnnext">btnNext</string>
    <string name="cd_ccd_labledeliverydetailstitle">lableDeliveryDetailsTitle</string>
    <string name="cd_ccd_labledeliverydetailsdescription">lableDeliveryDetailsDescription</string>
    <string name="cd_ccd_labelcomplexname">labelComplexName</string>
    <string name="cd_ccd_txtcomplexname">txtComplexName</string>
    <string name="cd_ccd_labelstreetaddress">labelStreetAddress</string>
    <string name="cd_ccd_txtstreetaddress">txtStreetAddress</string>
    <string name="cd_ccd_labelsuburb">labelSuburb</string>
    <string name="cd_ccd_txtsuburb">txtSuburb</string>
    <string name="cd_ccd_labelcity">labelCity</string>
    <string name="cd_ccd_txtcity">txtCity</string>
    <string name="cd_ccd_labelprovince">labelProvince</string>
    <string name="cd_ccd_txtprovince">txtProvince</string>
    <string name="cd_ccd_labelpostalcode">labelPostalCode</string>
    <string name="cd_ccd_txtpostalcode">txtPostalCode</string>
    <string name="clear_details"><u>Clear Details</u></string>
    <string name="hint_complex_building">Building name, unit or floor number</string>
    <string name="hint_business_name">Enter business name</string>
    <string name="hint_street_address">E.g. 123 Ocean View Drive</string>
    <string name="hint_suburb">Select Suburb</string>
    <string name="hint_province">Select Province</string>
</resources>