<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/navigation_today"
        android:checked="true"
        android:icon="@drawable/ic_drw_tww"
        android:title="@string/bottom_title_today"/>

    <item
        android:id="@+id/navigate_to_shop"
        android:icon="@drawable/ic_drw_products"
        android:title="@string/bottom_title_product"/>


    <item
        android:id="@+id/navigate_to_cart"
        android:icon="@drawable/cart_icon"
        android:title="@string/bottom_title_cart"/>

    <item
        android:id="@+id/navigate_to_wreward"
        android:icon="@drawable/icon_wreward"
        android:title="@string/bottom_title_reward"/>

    <item
        android:id="@+id/navigate_to_account"
        android:icon="@drawable/ic_drw_accounts"
        android:title="@string/bottom_title_account"/>

</menu>
