<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/submitAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/thirty_two_dp"
        android:layout_marginBottom="@dimen/thirty_two_dp"
        android:background="@drawable/next_button_icon"
        android:contentDescription="@string/cd_ccd_btnnext"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <za.co.woolworths.financial.services.android.ui.views.WTextView
        android:id="@+id/clearDetails"
        style="@style/opensans_regular_14_black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/thirty_two_dp"
        android:layout_marginBottom="@dimen/fourty_seven_dp"
        android:text="@string/clear_details"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/twenty_four_dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@id/submitAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/thirty_two_dp">

            <EditText
                android:id="@+id/complexOrBuildingName"
                style="@style/credi_card_delivery_edittext_style"
                android:contentDescription="@string/cd_ccd_txtcomplexname"
                android:hint="@string/hint_complex_building"
                app:layout_constraintEnd_toEndOf="@id/right_guideline"
                app:layout_constraintStart_toStartOf="@id/left_guideline"
                app:layout_constraintTop_toBottomOf="@id/complexPlaceHolder" />

            <EditText
                android:id="@+id/businessName"
                style="@style/credi_card_delivery_edittext_style"
                android:hint="@string/hint_business_name"
                app:layout_constraintEnd_toEndOf="@id/right_guideline"
                app:layout_constraintStart_toStartOf="@id/left_guideline"
                app:layout_constraintTop_toBottomOf="@id/businessNamePlaceHolder" />

            <EditText
                android:id="@+id/streetAddress"
                style="@style/credi_card_delivery_edittext_style"
                android:contentDescription="@string/cd_ccd_txtstreetaddress"
                android:hint="@string/hint_street_address"
                app:layout_constraintEnd_toEndOf="@id/right_guideline"
                app:layout_constraintStart_toStartOf="@id/left_guideline"
                app:layout_constraintTop_toBottomOf="@id/streetAddressPlaceHolder" />

            <EditText
                android:id="@+id/suburb"
                style="@style/credi_card_delivery_edittext_style"
                android:contentDescription="@string/cd_ccd_txtsuburb"
                android:hint="@string/hint_suburb"
                app:layout_constraintEnd_toEndOf="@id/right_guideline"
                app:layout_constraintStart_toStartOf="@id/left_guideline"
                app:layout_constraintTop_toBottomOf="@id/suburbPlaceHolder" />

            <EditText
                android:id="@+id/cityOrTown"
                style="@style/credi_card_delivery_edittext_style"
                android:contentDescription="@string/cd_ccd_txtcity"
                android:hint="@string/hint_suburb"
                app:layout_constraintEnd_toEndOf="@id/right_guideline"
                app:layout_constraintStart_toStartOf="@id/left_guideline"
                app:layout_constraintTop_toBottomOf="@id/cityPlaceHolder" />

            <EditText
                android:id="@+id/province"
                style="@style/credi_card_delivery_edittext_style"
                android:contentDescription="@string/cd_ccd_txtprovince"
                android:hint="@string/hint_province"
                app:layout_constraintEnd_toEndOf="@id/right_guideline"
                app:layout_constraintStart_toStartOf="@id/left_guideline"
                app:layout_constraintTop_toBottomOf="@id/provincePlaceHolder" />


            <EditText
                android:id="@+id/postalCode"
                style="@style/credi_card_delivery_edittext_style"
                android:contentDescription="@string/cd_ccd_txtpostalcode"
                android:imeOptions="actionDone"
                app:layout_constraintEnd_toEndOf="@id/right_guideline"
                app:layout_constraintStart_toStartOf="@id/left_guideline"
                app:layout_constraintTop_toBottomOf="@id/postalCodePlaceHolder" />

            <TextView
                android:id="@+id/complexOrBuildingNameErrorMsg"
                style="@style/opensans_regular_12_text_style"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/eight_dp"
                android:lineSpacingMultiplier="1.40"
                android:text="@string/build_or_complex_error_msg"
                android:textColor="@color/input_error_color_code"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@id/right_guideline"
                app:layout_constraintStart_toStartOf="@id/left_guideline"
                app:layout_constraintTop_toBottomOf="@id/complexOrBuildingName" />

            <TextView
                android:id="@+id/businessNameErrorMsg"
                style="@style/opensans_regular_12_text_style"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/eight_dp"
                android:lineSpacingMultiplier="1.40"
                android:text="@string/business_name_error_msg"
                android:textColor="@color/input_error_color_code"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@id/right_guideline"
                app:layout_constraintStart_toStartOf="@id/left_guideline"
                app:layout_constraintTop_toBottomOf="@id/businessName" />

            <TextView
                android:id="@+id/streetAddressErrorMsg"
                style="@style/opensans_regular_12_text_style"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/eight_dp"
                android:lineSpacingMultiplier="1.40"
                android:text="@string/street_address_error_msg"
                android:textColor="@color/input_error_color_code"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@id/right_guideline"
                app:layout_constraintStart_toStartOf="@id/left_guideline"
                app:layout_constraintTop_toBottomOf="@id/streetAddress" />

            <TextView
                android:id="@+id/suburbErrorMsg"
                style="@style/opensans_regular_12_text_style"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/eight_dp"
                android:lineSpacingMultiplier="1.40"
                android:text="@string/suburb_error_msg"
                android:textColor="@color/input_error_color_code"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@id/right_guideline"
                app:layout_constraintStart_toStartOf="@id/left_guideline"
                app:layout_constraintTop_toBottomOf="@id/suburb" />

            <TextView
                android:id="@+id/cityOrTownErrorMsg"
                style="@style/opensans_regular_12_text_style"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/eight_dp"
                android:lineSpacingMultiplier="1.40"
                android:text="@string/city_or_town_error_msg"
                android:textColor="@color/input_error_color_code"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@id/right_guideline"
                app:layout_constraintStart_toStartOf="@id/left_guideline"
                app:layout_constraintTop_toBottomOf="@id/cityOrTown" />

            <TextView
                android:id="@+id/provinceErrorMsg"
                style="@style/opensans_regular_12_text_style"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/eight_dp"
                android:lineSpacingMultiplier="1.40"
                android:text="@string/province_error_msg"
                android:textColor="@color/input_error_color_code"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@id/right_guideline"
                app:layout_constraintStart_toStartOf="@id/left_guideline"
                app:layout_constraintTop_toBottomOf="@id/province" />

            <TextView
                android:id="@+id/postalCodeErrorMsg"
                style="@style/opensans_regular_12_text_style"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/eight_dp"
                android:lineSpacingMultiplier="1.40"
                android:text="@string/postalcode_error_msg"
                android:textColor="@color/input_error_color_code"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@id/right_guideline"
                app:layout_constraintStart_toStartOf="@id/left_guideline"
                app:layout_constraintTop_toBottomOf="@id/postalCode" />

            <TextView
                android:id="@+id/deliveryDetailsDesc"
                style="@style/opensans_regular_13_black"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/eight_dp"
                android:contentDescription="@string/cd_ccd_labledeliverydetailsdescription"
                android:lineSpacingMultiplier="1.40"
                android:text="@string/delivery_details_desc"
                android:textColor="#50333333"
                app:layout_constraintEnd_toEndOf="@id/right_guideline"
                app:layout_constraintStart_toStartOf="@id/left_guideline"
                app:layout_constraintTop_toBottomOf="@id/deliveryDetailsTitle" />

            <TextView
                android:id="@+id/complexPlaceHolder"
                style="@style/opensans_regular_12_black"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/thirty_two_dp"
                android:contentDescription="@string/cd_ccd_labelcomplexname"
                android:text="@string/complex_building"
                app:layout_constraintEnd_toEndOf="@id/right_guideline"
                app:layout_constraintStart_toStartOf="@id/left_guideline"
                app:layout_constraintTop_toBottomOf="@id/deliveryDetailsDesc" />

            <TextView
                android:id="@+id/deliveryDetailsTitle"
                style="@style/futura_semi_bold_black"
                android:contentDescription="@string/cd_ccd_labledeliverydetailstitle"
                android:letterSpacing="0.1"
                android:text="@string/delivery_details"
                android:textSize="@dimen/twenty_sp"
                app:layout_constraintRight_toRightOf="@id/right_guideline"
                app:layout_constraintStart_toStartOf="@id/left_guideline"
                app:layout_constraintTop_toTopOf="@id/top_guideline" />

            <TextView
                android:id="@+id/businessNamePlaceHolder"
                style="@style/opensans_regular_12_black"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/twenty_four_dp"
                android:text="@string/business_name_optional"
                app:layout_constraintEnd_toEndOf="@id/right_guideline"
                app:layout_constraintStart_toStartOf="@id/left_guideline"
                app:layout_constraintTop_toBottomOf="@id/complexOrBuildingNameErrorMsg" />

            <TextView
                android:id="@+id/streetAddressPlaceHolder"
                style="@style/opensans_regular_12_black"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/twenty_four_dp"
                android:contentDescription="@string/cd_ccd_labelstreetaddress"
                android:text="@string/street_address"
                app:layout_constraintEnd_toEndOf="@id/right_guideline"
                app:layout_constraintStart_toStartOf="@id/left_guideline"
                app:layout_constraintTop_toBottomOf="@id/businessNameErrorMsg" />

            <TextView
                android:id="@+id/suburbPlaceHolder"
                style="@style/opensans_regular_12_black"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/twenty_four_dp"
                android:contentDescription="@string/cd_ccd_labelsuburb"
                android:text="@string/suburb"
                app:layout_constraintEnd_toEndOf="@id/right_guideline"
                app:layout_constraintStart_toStartOf="@id/left_guideline"
                app:layout_constraintTop_toBottomOf="@id/streetAddressErrorMsg" />

            <TextView
                android:id="@+id/cityPlaceHolder"
                style="@style/opensans_regular_12_black"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/twenty_four_dp"
                android:contentDescription="@string/cd_ccd_labelcity"
                android:text="@string/city_town"
                app:layout_constraintEnd_toEndOf="@id/right_guideline"
                app:layout_constraintStart_toStartOf="@id/left_guideline"
                app:layout_constraintTop_toBottomOf="@id/suburbErrorMsg" />

            <TextView
                android:id="@+id/provincePlaceHolder"
                style="@style/opensans_regular_12_black"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/twenty_four_dp"
                android:contentDescription="@string/cd_ccd_labelprovince"
                android:text="@string/province"
                app:layout_constraintEnd_toEndOf="@id/right_guideline"
                app:layout_constraintStart_toStartOf="@id/left_guideline"
                app:layout_constraintTop_toBottomOf="@id/cityOrTownErrorMsg" />

            <TextView
                android:id="@+id/postalCodePlaceHolder"
                style="@style/opensans_regular_12_black"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/twenty_four_dp"
                android:contentDescription="@string/cd_ccd_labelpostalcode"
                android:text="@string/postal_code"
                app:layout_constraintEnd_toEndOf="@id/right_guideline"
                app:layout_constraintStart_toStartOf="@id/left_guideline"
                app:layout_constraintTop_toBottomOf="@id/provinceErrorMsg" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/left_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/thirty_two_dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/right_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/thirty_two_dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/top_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="@dimen/thirty_two_dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
