<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:id="@+id/topMarginView"
        android:layout_width="match_parent"
        android:layout_height="16dp"
        android:background="@color/recent_search_bg" />

    <RelativeLayout
        android:id="@+id/applyStoreCard"
        style="@style/accountsCardStyle">

        <ImageView
            android:id="@+id/imgStoreCardApply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:background="@drawable/small_2"
            android:focusable="false"
            android:focusableInTouchMode="false" />

        <za.co.woolworths.financial.services.android.ui.views.WTextView
            style="@style/sectionCardLight"
            android:layout_toEndOf="@+id/imgStoreCardApply"
            android:contentDescription="@string/cd_store_card_text"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:text="@string/store_card"
            android:textSize="@dimen/acc_thirteen_sp"
            app:WTextView_font="medium" />

        <za.co.woolworths.financial.services.android.ui.views.WTextView
            android:id="@+id/applyNowStoreCardTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/cd_store_card_apply_now_text"
            android:drawableEnd="@drawable/ic_caret_black"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:gravity="center_vertical"
            android:text="@string/apply_now"
            android:textColor="@color/black_off"
            android:textSize="@dimen/acc_thirteen_sp"
            app:WTextView_font="medium_bold" />
    </RelativeLayout>

</LinearLayout>